--- a/index.html
+++ b/index.html
@@ -6,11 +6,72 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-		/>
+
+		<!-- SEO Meta Tags -->
 		<title>Bharat Bhusal</title>
+		<meta
+			name="description"
+			content="Bharat Bhusal is a Security Auditor, MERN Stack Developer, and Community Manager. Learn more about his professional journey, skills, and projects."
+		/>
+		<meta
+			name="keywords"
+			content="Bharat Bhusal, Security Auditor, MERN Stack Developer, Community Manager, Developer, Web Developer, Blockchain Security"
+		/>
+		<meta name="author" content="Bharat Bhusal" />
+
+		<!-- Custom Font: Poppins -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
+			rel="stylesheet"
+		/>
+		<!-- Open Graph Meta Tags for Social Media Sharing -->
+		<meta
+			property="og:title"
+			content="Bharat Bhusal - Security Auditor | MERN Stack Developer"
+		/>
+		<meta
+			property="og:description"
+			content="Discover the work of Bharat Bhusal, a skilled Security Auditor and MERN Stack Developer with experience in blockchain security and fullstack web application development."
+		/>
+		<meta
+			property="og:image"
+			content="/public/bharatbhusal.jpeg"
+		/>
+
+		<meta
+			property="og:url"
+			content="https://bharatbhusal.com"
+		/>
+
+		<meta property="og:type" content="website" />
+
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Bharat Bhusal - Security Auditor | MERN Stack Developer"
+		/>
+		<meta
+			name="twitter:description"
+			content="Explore Bharat Bhusal's professional skills in security auditing, MERN stack development, and community management."
+		/>
+		<meta
+			name="twitter:image"
+			content="/public/bharatbhusal.jpeg"
+		/>
+		<!-- Replace with your image URL -->
+		<meta name="twitter:site" content="@bharatbhusal02" />
+		<!-- Your Twitter username -->
+
+		<!-- Canonical URL for SEO -->
+		<link rel="canonical" href="https://bharatbhusal.com" />
+
+		<!-- Favicon -->
+		<link
+			rel="icon"
+			type="image/jpeg"
+			href="/public/bharatbhusal.jpeg"
+		/>
 	</head>
 	<body>
 		<div id="root"></div>
