--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 			property="og:description"
 			content="Discover the work of Bharat Bhusal, a skilled Security Auditor and MERN Stack Developer with experience in blockchain security and fullstack web application development."
 		/>
-		<meta
-			property="og:image"
-			content="/public/bharatbhusal.jpeg"
-		/>
+		<meta property="og:image" content="/bharatbhusal.jpeg" />
 
 		<meta
 			property="og:url"
@@ -55,10 +52,7 @@
 			name="twitter:description"
 			content="Explore Bharat Bhusal's professional skills in security auditing, MERN stack development, and community management."
 		/>
-		<meta
-			name="twitter:image"
-			content="/public/bharatbhusal.jpeg"
-		/>
+		<meta name="twitter:image" content="/bharatbhusal.jpeg" />
 		<!-- Replace with your image URL -->
 		<meta name="twitter:site" content="@bharatbhusal02" />
 		<!-- Your Twitter username -->
@@ -70,7 +64,7 @@
 		<link
 			rel="icon"
 			type="image/jpeg"
-			href="/public/bharatbhusal.jpeg"
+			href="/bharatbhusal.jpeg"
 		/>
 	</head>
 	<body>
